# AG-UI-CrewAI

./: README.md
ag-ui-restaurant-agent/: README.md  docs.md  pyproject.toml  restaurant_recommendations.md
ag-ui-restaurant-agent/docs/: human_in_the_loop_guide.md
ag-ui-restaurant-agent/src/restaurant_finder_agent/: agui_crew.py  api.py  crew.py  main.py
ag-ui-restaurant-agent/src/restaurant_finder_agent/config/: agents.yaml  tasks.yaml
ag-ui-restaurant-agent/src/restaurant_finder_agent/tools/: __init__.py  custom_human_input.py
ag-ui-restaurant-frontend/: package-lock.json  package.json
ag-ui-restaurant-frontend/src/app/: layout.tsx  page.tsx
ag-ui-restaurant-frontend/src/app/api/copilotkit/: route.ts
ag-ui-restaurant-frontend/src/app/components/: RestaurantFinder.tsx
ag-ui-restaurant-frontend/src/app/copilotkit/: layout.tsx  page.tsx
ag-ui-restaurant-frontend/src/lib/: code.tsx  restaurant-types.ts
